# Profit-Optimized-Meal-Ordering-System

./: .gitmodules  README.md
Algorithms/: CMakeLists.txt  main.cpp
Server/: app.py
Server/algorithms/: CMakeLists.txt  binder.cpp  compile_commands.json  main.cpp  test.py
Server/algorithms/.cache/clangd/index/: attr.h.B6F10604643FED6D.idx  buffer_info.h.A7ADAD837900245B.idx  cast.h.9CC672170572DC3F.idx  class.h.826EC001D87F669C.idx  common.h.FCD59902B1831EA5.idx  courier.cpp.1474DE08DC5AD6C1.idx  courier.hpp.5A8BF8790D757BE6.idx  descr.h.7ED64F74D7B665F8.idx  gil.h.068C2427CC82FA12.idx  greedy.cpp.0C84A343DB9478F7.idx  greedy.hpp.5C3DE2C00C42514B.idx  init.h.6C1C9DD62E105FE8.idx  internals.h.B3D1AC9DB12435FB.idx  main.cpp.B2605FE815BE337B.idx  options.h.3F823FFAFD67F715.idx  order.cpp.3A30420121A039FF.idx  order.hpp.DD59E6B9642F1A06.idx  profit_wrap.cpp.B775BC8C5BE2DA93.idx  profit_wrap.hpp.0C43FF98A609C25B.idx  pybind11.h.6B8958E699C754A2.idx  pytypes.h.FB7007CF75D16639.idx  type_caster_base.h.9E2CAFE03F0442F5.idx  typeid.h.4F0371B67414B02F.idx  utility.cpp.AC195AB21D517FD4.idx  utility.hpp.50BCCB446D5AC966.idx
Server/algorithms/algo_functions/: test_file.cpp  test_file.h
Server/algorithms/tests/: CMakeLists.txt  tests.cpp
Server/algorithms/utils/: approaches.cpp  approaches.hpp  assignment.hpp  courier.cpp  courier.hpp  greedy.cpp  greedy.hpp  order.cpp  order.hpp  profit_wrap.cpp  profit_wrap.hpp  utility.cpp  utility.hpp
frontend/: App.js  app.json  babel.config.js  firebase.js  package-lock.json  package.json  store.js
frontend/screens/: HomeScreen.js  LandingScreen.js  LoginScreen.js  OrderScreen.js  RegisterScreen.js
frontend/slices/: orders.js
frontend/utils/: socket.js
